dynamic tweets - renders dummy text to page

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,9 @@
               <span class="counter">140</span>
             </form>
           </section>
-          <section>
+          <section id="tweet-container" class="tweet-container">
             <article>
-              <header><img class= "profile" src="/images/rick.png"><h2>Header</h2>
+              <header><img class= "profile" src="/images/rick.png"><p3>@C-137</p3><h2>Rick Sanchez</h2>
               </header>
               <p>little tweet here</p>
               <footer><p1>10 days to go</p1>
