--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!--External fonts-->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    
 
 
 
@@ -23,6 +24,7 @@
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -37,33 +39,24 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose" type= "submit">
+        <i class="far fa-edit"></i> Compose
+      </button>
     </nav>
-
     <!-- Page-specific (main) content here -->
     <main class="container">
         <section class="new-tweet">
-            <h2>Compose Tweet</h2>
-            <form id="tweetForm" action="/tweets" method="POST">
-              <textarea id="tweetPost" name="text" placeholder="What are you humming about?"></textarea>
-              <input type="submit" value="Tweet">
-              <span class="counter">140</span>
-            </form>
-          </section>
-          <section id="tweet-container" class="tweet-container">
-            <article>
-              <header><img class= "profile" src="/images/rick.png"><p3>@C-137</p3><h2>Rick Sanchez</h2>
-              </header>
-              <p>little tweet here</p>
-              <footer><p1>10 days to go</p1>
-                <p2>
-                  <i class="fas fa-heart"></i>
-                  <i class="fas fa-flag"></i>
-                  <i class="fas fa-retweet"></i>
-                </p2>  
-              </footer>
-            </article>
+          <h2>Compose Tweet</h2>
+          <form id="tweetForm" action="/tweets" method="POST">
+            <textarea id="tweetPost" name="text" placeholder="What are you humming about?"></textarea>
+            <p1>
+              <input type="submit" value="Tweet"></input>
+            </p1>
+            <p2> </p2>
+            <span class="counter">140</span>
+          </form>
         </section>
+        <section class="tweet-container"></section>
     </main>
-
   </body>
 </html>
